home section design

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="css/style.css">
 
-      <!-- box icons -->
-      <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- box icons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -28,11 +28,24 @@
 
     </header>
 
-<!-- home section design -->
+    <!-- home section design -->
 
+    <section class="home" id="home">
+        <div class="home-content">
+            <h2>Merhaba, Ben <span>Tuana Genç</span> </h2>
+            <div class="text-animate">
+                <h3>Frontend Developer</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus molestias dicta dolorum necessitatibus in
+                ipsam quas reiciendis id assumenda ullam autem praesentium ipsa odit illo, sed natus.</p>
 
+            <div class="btn-box">
+                <a href="#" class="btn">Hire Me</a>
+                <a href="#" class="btn">Let's Talk</a>
+            </div>
+        </div>
 
-
+    </section>
 
 
     <script src="js/script.js"></script>
