social media added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
                 <a href="#" class="btn">Let's Talk</a>
             </div>
         </div>
-
+        <div class="home-sci">
+            <a href=""><i class='bx bxl-instagram' ></i></a>
+            <a href=""><i class='bx bxl-twitter' ></i></a>
+            <a href=""><i class='bx bxl-linkedin' ></i></a>
+        </div>
     </section>
 
 
