--- a/index.html
+++ b/index.html
@@ -45,12 +45,37 @@
             </div>
         </div>
         <div class="home-sci">
-            <a href=""><i class='bx bxl-instagram' ></i></a>
-            <a href=""><i class='bx bxl-twitter' ></i></a>
-            <a href=""><i class='bx bxl-linkedin' ></i></a>
+            <a href="https://www.instagram.com/tuanagenc.1/" target="_blank"><i class='bx bxl-instagram'></i></a>
+            <a href=""><i class='bx bxl-twitter'></i></a>
+            <a href="https://www.linkedin.com/in/tuana-genc/" target="_blank"><i class='bx bxl-linkedin'></i></a>
         </div>
 
+        <div class="home-imgHover"></div>
     </section>
+
+    <!-- about section design -->
+<section class="about" id="about">
+<h2 class="heading">About <span>Me</span></h2>
+
+
+<div class="about-img">
+    <img src="img/about.jpg" alt="">
+    <span class="circle-spin"></span>
+</div>
+
+<div class="about-content">
+    <h3>Frontend Developer!</h3>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, inventore adipisci. Voluptatem nam perferendis optio, error fugit pariatur adipisci dolores maiores itaque eveniet saepe iusto? Odit ad suscipit sed nobis assumenda culpa quisquam, ab alias aliquid quasi aperiam libero earum iste voluptate, fugiat id sapiente? Facere quasi dolor fuga iste excepturi itaque perspiciatis voluptatum, magnam alias mollitia accusantium earum, culpa expedita soluta dolorum accusamus! Eius exercitationem inventore suscipit deleniti mollitia.</p>
+    <div class="btn-box btns">
+        <a href="#" class="btn">Devamını Oku</a>
+    </div>
+</div>
+</section>
+
+
+
+
+
 
 
     <script src="js/script.js"></script>
