education section design added

--- a/index.html
+++ b/index.html
@@ -54,27 +54,121 @@
     </section>
 
     <!-- about section design -->
-<section class="about" id="about">
-<h2 class="heading">About <span>Me</span></h2>
+    <section class="about" id="about">
+        <h2 class="heading">About <span>Me</span></h2>
 
 
-<div class="about-img">
-    <img src="img/about.jpg" alt="">
-    <span class="circle-spin"></span>
-</div>
+        <div class="about-img">
+            <img src="img/about.jpg" alt="">
+            <span class="circle-spin"></span>
+        </div>
 
-<div class="about-content">
-    <h3>Frontend Developer!</h3>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, inventore adipisci. Voluptatem nam perferendis optio, error fugit pariatur adipisci dolores maiores itaque eveniet saepe iusto? Odit ad suscipit sed nobis assumenda culpa quisquam, ab alias aliquid quasi aperiam libero earum iste voluptate, fugiat id sapiente? Facere quasi dolor fuga iste excepturi itaque perspiciatis voluptatum, magnam alias mollitia accusantium earum, culpa expedita soluta dolorum accusamus! Eius exercitationem inventore suscipit deleniti mollitia.</p>
-    <div class="btn-box btns">
-        <a href="#" class="btn">Devamını Oku</a>
-    </div>
-</div>
-</section>
+        <div class="about-content">
+            <h3>Frontend Developer!</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, inventore adipisci. Voluptatem nam
+                perferendis optio, error fugit pariatur adipisci dolores maiores itaque eveniet saepe iusto? Odit ad
+                suscipit sed nobis assumenda culpa quisquam, ab alias aliquid quasi aperiam libero earum iste voluptate,
+                fugiat id sapiente? Facere quasi dolor fuga iste excepturi itaque perspiciatis voluptatum, magnam alias
+                mollitia accusantium earum, culpa expedita soluta dolorum accusamus! Eius exercitationem inventore
+                suscipit deleniti mollitia.</p>
+            <div class="btn-box btns">
+                <a href="#" class="btn">Devamını Oku</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- education section design  -->
+    <section class="education" id="education">
+        <h2 class="heading">My <span>Journey</span></h2>
+        <div class="education-row">
+            <div class="education-column">
+                <h3 class="title">Education</h3>
+                <div class="education-box">
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
+                            <h3>Yüksek Lisans - Üniversite</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni id illum nemo corporis
+                                voluptate voluptatum quisquam sapiente sequi aut facilis. Minus molestias dicta dolorum
+                                necessitatibus in
+                                ipsam quas reiciendis id assumenda ullam autem praesentium ipsa odit illo, sed natus.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 2018 - 2019</div>
+                            <h3>Yüksek Lisans - Üniversite</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni id illum nemo corporis
+                                voluptate voluptatum quisquam sapiente sequi aut facilis. Minus molestias dicta dolorum
+                                necessitatibus in
+                                ipsam quas reiciendis id assumenda ullam autem praesentium ipsa odit illo, sed natus.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 2019 - 2020</div>
+                            <h3>Yüksek Lisans - Üniversite</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni id illum nemo corporis
+                                voluptate voluptatum quisquam sapiente sequi aut facilis. Minus molestias dicta dolorum
+                                necessitatibus in
+                                ipsam quas reiciendis id assumenda ullam autem praesentium ipsa odit illo, sed natus.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="education-column">
+                <h3 class="title">Deneyim <!--experince--> </h3>
+                <div class="education-box">
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
+                            <h3>Web Geliştirici - Şirket</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni id illum nemo corporis
+                                voluptate voluptatum quisquam sapiente sequi aut facilis. Minus molestias dicta dolorum
+                                necessitatibus in
+                                ipsam quas reiciendis id assumenda ullam autem praesentium ipsa odit illo, sed natus.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 2018 - 2019</div>
+                            <h3>Web Geliştirici - Şirket</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni id illum nemo corporis
+                                voluptate voluptatum quisquam sapiente sequi aut facilis. Minus molestias dicta dolorum
+                                necessitatibus in
+                                ipsam quas reiciendis id assumenda ullam autem praesentium ipsa odit illo, sed natus.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 2019 - 2020</div>
+                            <h3>Web Geliştirici - Şirket</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni id illum nemo corporis
+                                voluptate voluptatum quisquam sapiente sequi aut facilis. Minus molestias dicta dolorum
+                                necessitatibus in
+                                ipsam quas reiciendis id assumenda ullam autem praesentium ipsa odit illo, sed natus.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
 
 
+        </div>
+    </section>
 
 
 
