--- a/index.html
+++ b/index.html
@@ -264,6 +264,16 @@
         </form>
     </section>
 
+    <!-- footer design  -->
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2023 by Codehal | All Rights Reserved</p>
+        </div>
+        <div class="footer-iconTop">
+            <a href="#"><i class='bx bx-up-arrow-alt'></i></a>
+        </div>
+    </footer>
+
     <script src="js/script.js"></script>
 </body>
 
