Edıt has been made added

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
         <a href="#" class="logo">Tuana.</a>
 
         <div class="bx bx-menu" id="menu-icon"></div>
-        
+
         <nav class="navbar">
             <a href="#home" class="active">Anasayfa</a>
             <a href="#about">Hakkımda</a>
             <a href="#education">Eğitimler</a>
             <a href="#skills">Yetenekler</a>
             <a href="#contact">İletişim</a>
+
+            <span class="active-nav"></span>
         </nav>
 
     </header>
@@ -38,7 +40,8 @@
                 <h3>Frontend Developer</h3>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus molestias dicta dolorum necessitatibus in
-                ipsam quas reiciendis id assumenda ullam autem praesentium ipsa odit illo, sed natus.</p>
+                id assumenda ullam autem praesentium ipsa odit illo, sed natus.Lorem ipsum dolor sit amet consectetur
+                ullam autem praesentium elit.</p>
 
             <div class="btn-box">
                 <a href="#" class="btn">Hire Me</a>
