--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Tuana.</a>
+        <a href="#" class="logo">Tuana.<span class="animate" style="--i:1;"></span></a>
 
-        <div class="bx bx-menu" id="menu-icon"></div>
+        <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
 
         <nav class="navbar">
             <a href="#home" class="active">Anasayfa</a>
@@ -27,66 +27,79 @@
             <a href="#contact">İletişim</a>
 
             <span class="active-nav"></span>
+            <span class="animate" style="--i:2;"></span>
         </nav>
 
     </header>
 
     <!-- home section design -->
 
-    <section class="home" id="home">
+
+    <section class="home show-animate" id="home">
         <div class="home-content">
-            <h2>Merhaba, Ben <span>Tuana Genç</span> </h2>
+            <h2>Merhaba, Ben <span>Tuana Genç</span><span class="animate" style="--i:2;"></span></h2>
             <div class="text-animate">
                 <h3>Frontend Developer</h3>
+                <span class="animate" style="--i:3;"></span>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus molestias dicta dolorum necessitatibus in
-                id assumenda ullam autem praesentium ipsa odit illo, sed natus.Lorem ipsum dolor sit amet consectetur
-                ullam autem praesentium elit.</p>
+            id assumenda
+                 ullam autem praesentium ipsa odit illo, sed natus.Lorem ipsum dolor sit amet consectetur
+                 ullam autem praesentium elit.
+                 <span class="animate" style="--i:4;"></span>
+            </p>
 
             <div class="btn-box">
                 <a href="#" class="btn">Hire Me</a>
                 <a href="#" class="btn">Let's Talk</a>
+                <span class="animate" style="--i:5;"></span>
             </div>
         </div>
         <div class="home-sci">
             <a href="https://www.instagram.com/tuanagenc.1/" target="_blank"><i class='bx bxl-instagram'></i></a>
             <a href=""><i class='bx bxl-twitter'></i></a>
             <a href="https://www.linkedin.com/in/tuana-genc/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+            <span class="animate" style="--i:6;"></span>
         </div>
 
         <div class="home-imgHover"></div>
+        <span class="animate home-img" style="--i:7;"></span>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
-        <h2 class="heading">About <span>Me</span></h2>
+        <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
 
 
         <div class="about-img">
             <img src="img/about.jpg" alt="">
             <span class="circle-spin"></span>
+            <span class="animate scroll" style="--i:2;"></span>
         </div>
 
         <div class="about-content">
-            <h3>Frontend Developer!</h3>
+            <h3>Frontend Developer!<span class="animate scroll" style="--i:3;"></span></h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, inventore adipisci. Voluptatem nam
                 perferendis optio, error fugit pariatur adipisci dolores maiores itaque eveniet saepe iusto? Odit ad
                 suscipit sed nobis assumenda culpa quisquam, ab alias aliquid quasi aperiam libero earum iste voluptate,
                 fugiat id sapiente? Facere quasi dolor fuga iste excepturi itaque perspiciatis voluptatum, magnam alias
                 mollitia accusantium earum, culpa expedita soluta dolorum accusamus! Eius exercitationem inventore
-                suscipit deleniti mollitia.</p>
+                suscipit deleniti mollitia.
+                <span class="animate scroll" style="--i:4;"></span>
+            </p>
             <div class="btn-box btns">
                 <a href="#" class="btn">Devamını Oku</a>
+                <span class="animate scroll" style="--i:5;"></span>
             </div>
         </div>
     </section>
 
     <!-- education section design  -->
     <section class="education" id="education">
-        <h2 class="heading">My <span>Journey</span></h2>
+        <h2 class="heading">My <span>Journey</span><span class="animate scroll" style="--i:1;"></span></h2>
         <div class="education-row">
             <div class="education-column">
-                <h3 class="title">Eğitim<!--Education--></h3>
+                <h3 class="title">Eğitim<!--Education--><span class="animate scroll" style="--i:2;"></span></h3>
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
@@ -123,12 +136,13 @@
                             </p>
                         </div>
                     </div>
-                </div>
+                    <span class="animate scroll" style="--i:3;"></span>
+                </div> 
             </div>
 
 
             <div class="education-column">
-                <h3 class="title">Deneyim <!--experince--> </h3>
+                <h3 class="title">Deneyim <!--experince--><span class="animate scroll" style="--i:4;"></span></h3>
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
@@ -165,17 +179,18 @@
                             </p>
                         </div>
                     </div>
+                    <span class="animate scroll" style="--i:5;"></span>
                 </div>
             </div>
         </div>
     </section>
     <!--skills section design-->
     <section class="skills" id="skills">
-        <h2 class="heading">My <span>Skills</span></h2>
+        <h2 class="heading">My <span>Skills</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="skills-row">
             <div class="skills-column">
-                <h3 class="title">Coding Skills</h3>
+                <h3 class="title">Coding Skills<span class="animate scroll" style="--i:2;"></span></h3>
                 <div class="skills-box">
                     <div class="skills-content">
                         <div class="progress">
@@ -198,11 +213,12 @@
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
+                    <span class="animate scroll" style="--i:3;"></span>
                 </div>
             </div>
 
             <div class="skills-column">
-                <h3 class="title">Professional Skills</h3>
+                <h3 class="title">Professional Skills<span class="animate scroll" style="--i:5;"></span></h3>
                 <div class="skills-box">
                     <div class="skills-content">
                         <div class="progress">
@@ -225,6 +241,7 @@
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
+                    <span class="animate scroll" style="--i:6;"></span>
                 </div>
             </div>
         </div>
@@ -232,7 +249,7 @@
 
     <!-- contact section design  -->
     <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me!</span></h2>
+        <h2 class="heading">Contact <span>Me!</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <form action="#">
             <div class="input-box">
@@ -244,6 +261,7 @@
                     <input type="text" placeholder="Email Adress" required>
                     <span class="focus"></span>
                 </div>
+                <span class="animate scroll" style="--i:3;"></span>
             </div>
 
             <div class="input-box">
@@ -255,15 +273,20 @@
                     <input type="text" placeholder="Email Subject" required>
                     <span class="focus"></span>
                 </div>
+                <span class="animate scroll" style="--i:5;"></span>
             </div>
 
             <div class="textarea-field">
                 <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
                 <span class="focus"></span>
+
+                <span class="animate scroll" style="--i:7;"></span>
             </div>
 
             <div class="btn-box btns">
                 <button type="submit" class="btn">Submit</button>
+
+                <span class="animate scroll" style="--i:9;"></span>
             </div>
         </form>
     </section>
@@ -272,9 +295,13 @@
     <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2023 by Codehal | All Rights Reserved</p>
+
+            <span class="animate scroll" style="--i:1;"></span>
         </div>
         <div class="footer-iconTop">
             <a href="#"><i class='bx bx-up-arrow-alt'></i></a>
+
+            <span class="animate scroll" style="--i:3;"></span>
         </div>
     </footer>
 
